1.6.1: Got rid of ugly code not using proper objects by introducing CompileTask and Clash objects.